updated jquery. Fixed image link target being too small. Image popup now appears in the correct spot on mac.

--- a/resources/console/console.scss
+++ b/resources/console/console.scss
@@ -54,6 +54,11 @@ body {
 	padding:2px;
 	background-color:#e5a7b8;}
 
+.Rimg {
+	min-height:32px;
+	position:relative;
+}
+
 table.ir-expvec {
   border-collapse: collapse;
   margin-bottom: 6px;
